# DrivingCarByHandGestures

./: README.md
CNN_model/: CNN_model.ipynb  main.py
CNN_model/keras_model/variables/: variables.index
HandGestureRecognition/: demo.py
HandGestureRecognition/App/: app.py
HandGestureRecognition/Model_Ver1_CNN/: CNN_model.ipynb  class.txt  main.py
HandGestureRecognition/Model_Ver1_CNN/.ipynb_checkpoints/: CNN_model-checkpoint.ipynb
HandGestureRecognition/Model_Ver1_CNN/keras_model/: keras_metadata.pb  saved_model.pb
HandGestureRecognition/Model_Ver2_SSD/: CollectData.ipynb
HandGestureRecognition/Model_Ver2_SSDA/: Tutorial.ipynb  app.py
HandGestureRecognition/Model_Ver3_ANN/: gesture_recog.py  keypoint_classification.ipynb  sampling_data.py
hand_gesture_recognition_model/: keypoint_classification.ipynb  sampling_data.py
hand_gesture_recognition_model/model/: keypoint.csv  keypoint_classifier.hdf5  keypoint_classifier.tflite  keypoint_classifier_label.csv
my_worlds/: CMakeLists.txt  package.xml
my_worlds/launch/: leo_marsyard.launch  leo_smart.launch  model_gazebo.launch  modelpush.launch  mycar.launch  spawn_controllers.launch  spawn_model.launch  spawn_robot.launch  world1.launch
my_worlds/models/mycar/: mode.sdf  model.config
my_worlds/urdf/: car.urdf.xacro  car_sim.urdf.xacro  leo.urdf.xacro  leo_sim.urdf.xacro  macros.xacro  planar _move _plugin.xacro
my_worlds/worlds/: mycar.world  myworld.world  simple_city.world  smart.world
turtlebot3_teleop/: package.xml
turtlebot3_teleop/nodes/: turtlebot3_teleop_key
(+200 files in other folders)
